--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </title>
 </head>
 <body>
-    
+  <section class="bg"></section>
+  <div class="loading-text">0%</div>
+
+  <script src="script.js"></script>    
 </body>
 </html>
